Fix width of initial block appender
The width of the initial block appender was too narrow.

--- a/themes/shiro/assets/src/sass/editor/_global.scss
+++ b/themes/shiro/assets/src/sass/editor/_global.scss
@@ -11,6 +11,10 @@ $block-padding: 40px;
 	@include padding(0, strip-px($block-padding / 2), 0, strip-px($block-padding));
 }
 
+.wp-block.block-editor-default-block-appender {
+	max-width: rem(strip-px($content-column + 2 * $block-padding));
+}
+
 .block-editor-block-list__layout > .wp-block {
 	max-width: rem(strip-px($content-column + 2 * $block-padding));
 
